fix whitespace

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
     --size-305: calc(305 / 16 * 1rem);
     --size-355: calc(355 / 16 * 1rem);
     --size-445: calc(445 / 16 * 1rem);
+    --size-1120: calc(1120 / 16 * 1rem);
 
      /* SPACING */
     --space-50: calc(4 / 16 * 1rem);
@@ -210,7 +211,8 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    color: var(--slate-300);
+    color: var(--slate-600);
+    font-weight: var(--font-black);
 }
 
 .step-indicator__line {
@@ -529,6 +531,7 @@ body {
         gap: var(--space-400);
         padding: var(--space-1400) var(--space-1000);
         text-align: left;
+        /* max-width: var(--size-1120); */
 
         background:
             linear-gradient(var(--cyan-600-transparent), var(--cyan-600-transparent)),
@@ -537,6 +540,7 @@ body {
 
     .footer-cta .text__section-title {
         width: var(--size-445);
+        margin-left: auto;
     }
 
     .footer-cta .text__description {
